Thuan - Fix login

--- a/170516/Views/Administrator/_PartialAccount.cshtml
+++ b/170516/Views/Administrator/_PartialAccount.cshtml
@@ -8,7 +8,7 @@
         </a>
         <ul class="dropdown-menu">
             <li><a href="javascript:void(0)"><i class="fa fa-user m-r-5"></i> Cá Nhân</a></li>
-            <li><a href="javascript:void(0)"><i class="fa fa-power-off m-r-5"></i> Đăng Xuất</a></li>
+            <li><a href="@Url.Action("LogOff","Account")"><i class="fa fa-power-off m-r-5"></i> Đăng Xuất</a></li>
         </ul>
     </li>
 </ul>
